<resources>
    <string name="app_name">Marketplace</string>

    <!--BUTTONS-->
    <string name="btn_profile">Profile</string>
    <string name="btn_config">Configuration</string>
    <string name="btn_about">About</string>
    <string name="btn_close">Close</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_add_product">Add Product</string>
    <string name="btn_show_prod">Show</string>
    <string name="btn_add_cart">Add Cart</string>
    <string name="btn_del_cart">Remove Cart</string>
    <string name="btn_fav_product">Favorite</string>
    <string name="btn_fav_product_del">Remove Favorite</string>
    <string name="btn_shop">Buy</string>
    <string name="btn_add_gps">Select your location</string>
    <string name="btn_shop_clear">Clean Cart</string>

    <!--EDITTEXTS-->
    <string name="et_username">Username</string>
    <string name="et_password">Password</string>
    <string name="et_names">Names</string>
    <string name="et_surnames">Surnames</string>
    <string name="et_email">example@gmail.com</string>
    <string name="et_phonenumber">Phone number</string>
    <string name="et_name_product">Product Name</string>
    <string name="et_description">Describe your product</string>
    <string name="et_image">https://www.image.com</string>
    <string name="et_price">500000</string>

    <!--TEXTVIEW-->
    <string name="txt_title_login">Login</string>
    <string name="txt_title_register">Register</string>
    <string name="txt_error_login">Error login</string>
    <string name="txt_success_login">Succesfull login</string>
    <string name="txt_names">Names</string>
    <string name="txt_surnames">Surnames</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_phonenumber">Phone Number</string>
    <string name="txt_error">ERROR</string>
    <string name="txt_title_add_product">Add Product</string>
    <string name="txt_name_product">Product Name</string>
    <string name="txt_description">Description</string>
    <string name="txt_image">Image URL</string>
    <string name="txt_price">Price</string>
    <string name="txt_msg_register">Registered user</string>
    <string name="txt_msg_error_register">Registered user fail</string>
    <string name="txt_msg_fail">The data is incorrect</string>
    <string name="txt_msg_fail_exist">There is already a registered user with that email</string>
    <string name="txt_msg_add_product">Product added successfully</string>
    <string name="txt_msg_fail_empty">One or more fields are empty</string>
    <string name="txt_msg_add_product_fail">Product could not be saved</string>
    <string name="txt_msg_empty">Fill in the data</string>
    <string name="txt_msg_email_empty">The email is not registered</string>
    <string name="txt_msg_email_fail">Invalid email</string>
    <string name="txt_msg_db_fail">The database is not working</string>
    <string name="txt_msg_pass_fail">Incorrect password</string>
    <string name="txt_msg_pass_short">The password must have a minimum of 6 characters</string>
    <string name="txt_msg_phone_error">The phone is wrong</string>
    <string name="txt_msg_url_fail">The URL is wrong</string>
    <string name="txt_msg_login_success">Login success</string>
    <string name="txt_msg_prod_add_exist">The product is already added</string>
    <string name="txt_msg_prod_del_exist">The product has already been removed</string>
    <string name="txt_msg_prod_add">Product added</string>
    <string name="txt_msg_prod_del">Product removed</string>
    <string name="txt_msg_empty_gps">Select a location</string>

    <string name="txt_tittle_shop">PURCHASE</string>
    <string name="txt_success_shop">Purchase made</string>
    <string name="txt_success_clear">The shopping cart was cleaned</string>

    <!--SWITCH-->
    <string name="sw_terms">I accept the privacy statement policy and terms and conditions of use of the site.</string>

    <!--MENU-->
    <string name="action_add_product">Add Product</string>
    <string name="menu_home">Home</string>
    <string name="menu_products">Products</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_cart">Shopping Cart</string>

    <!--MESSAGE-->
    <string name="msg_empty_products">Has no added products</string>
    <string name="msg_empty_favorites">You have no added favorites</string>
    <string name="msg_add_max">The quantity of products cannot be increased</string>
    <string name="msg_substract_min">Cannot reduce the quantity of products</string>

    <string name="title_activity_pantalla_principal">ScreenPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="action_log_out">Log out</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="txt_location">SELLER LOCATION:</string>


</resources>