<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.caoc.marketplace.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.caoc.marketplace.ui.product.ProductFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.caoc.marketplace.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.caoc.marketplace.ui.cart.CartFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_cart" />
</navigation>